--- a/docs/components/doc-sections/en/download-connectors.html
+++ b/docs/components/doc-sections/en/download-connectors.html
@@ -14,14 +14,14 @@
             href="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@1.0.6/easy.js"> Download
         </a></p>
 
-    <pre><code class="HTML hljs">
+    <pre><code class="html hljs">
     &lt;script src="/js/easy.ajax.js"&gt;&lt;/script&gt;
     </code></pre>
 
     <p> Or, use... </p>
 
     <h3> <a> CDN </a> </h3>
-    <pre><code class="HTML hljs">
+    <pre><code class="html hljs">
     &lt;script src="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@1.0.6/easy.js"&gt;&lt;/script&gt;
     </code></pre>
 
