--- a/docs/components/doc-sections/en/events.html
+++ b/docs/components/doc-sections/en/events.html
@@ -21,9 +21,9 @@
         When Standard and Easy events are issued, the event object can be accessed in the
         <span class="note">event</span> variable. It contains the <span class="note mark-el">base</span>
         property, which is passed to the element that is associated with the event, and the
-        <span class="note">data</span> property, having the object of the current scope, this
-        is divided into: <span class="note">{ $model:{ <i class="mark-el">In case of e-for</i>
-            }, $scope: { <i class="mark-el">It has the scope object it self</i> } }</span>
+        <span class="note">$data</span> property, having the object of the current scope, this
+        is divided into: <span class="note">{ model:{ <i class="mark-el">In case of e-for</i>
+            }, scope: { <i class="mark-el">It has the scope object it self</i> } }</span>
     </p>
 
     <h3> <a id="events_standard" href="#events_standard"> Standard</a> </h3>
@@ -108,7 +108,7 @@
             
             /* Methods */
             addEmoji: function(evt){
-                switch(evt.data.$model.food.name) {
+                switch(evt.$data.model.food.name) {
                     case 'Rice':
                         evt.target.innerHTML += ' 🍚';
                         break;
@@ -150,7 +150,7 @@
     &lt;/div&gt;
     </code></pre>
 
-            <pre><code class="javascript hljs">
+    <pre><code class="javascript hljs">
     var app23 = new Easy('#app23', {
         data: {
             emitEvent: function(value){
@@ -166,7 +166,7 @@
             <div class="result"></div>
         </div>
     </div>
-
+    
     <div class="block-note warn">
         <p>
             Please skip this explanation if you understand the example above, because it can be
