--- a/docs/components/doc-sections/en/installation.html
+++ b/docs/components/doc-sections/en/installation.html
@@ -19,7 +19,7 @@
             href="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@1.0.6/easy.js"> Download </a>
     </p>
 
-    <pre><code class="HTML hljs">
+    <pre><code class="html hljs">
     &lt;script src="/js/easy.js"&gt;&lt;/script&gt;
     </code></pre>
 
@@ -32,7 +32,7 @@
         is a little bit simpler because the only thing that must be done is to import it
     </p>
 
-    <pre><code class="HTML hljs">
+    <pre><code class="html hljs">
     &lt;script src="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@1.0.6/easy.js"&gt;&lt;/script&gt;
     </code></pre>
 
