--- a/docs/components/main.html
+++ b/docs/components/main.html
@@ -60,10 +60,12 @@
     <div class="main-divider middle-content">
         <div class="center-content">
             <h3 class="main-page-description">
-                What's <span class="note">Easy.js</span>? Is a javascript library for building user interfaces, and helps in 
-                the web applications development, providing a synchronous interaction between user interfaces and 
-                Javascript data. In some ways and commands, it is very similar to 
-                <span class="note">Vue.js</span> and <span class="note">Angular.js</span>, but it handles things differently!
+                What's <span class="note">Easy.js</span>? Is a javascript library for building user interfaces, and
+                helps in
+                the web applications development, providing a synchronous interaction between user interfaces and
+                Javascript data. In some ways and commands, it is very similar to
+                <span class="note">Vue.js</span> and <span class="note">Angular.js</span>, but it handles things
+                differently!
             </h3>
         </div>
     </div>
@@ -87,8 +89,8 @@
                 <div>
                     <h2>Simple Sum Example</h2>
                     <p>Let's Two Way Data Bind now...</p>
-                    <p>We are using dynamic data property definition 'e-def'.
-                        In type of bind When some value changes, it updates
+                    <p>We are using dynamic data property definition `<i class="mark-el">e-def</i>`.
+                        In this type of binding when some value changes, it updates
                         the specific field in the element, it means that
                         your element will be always the same.</p>
                 </div>
@@ -101,7 +103,7 @@
                 <div>
                     <h2>Todo List Example</h2>
                     <p>Let's make a TODO List App</p>
-                    <p>You can manage your list as you expect</p>
+                    <p>You can manage your list as you expect.</p>
                 </div>
             </div>
             <inc src="editor" wait-data="todo-eg"></inc>
