Updated the download url in the documentation and in README.md file

--- a/docs/components/doc-sections/en/download-connectors.html
+++ b/docs/components/doc-sections/en/download-connectors.html
@@ -11,7 +11,7 @@
     <p> Use it locally, download the file and import it: </p>
 
     <p> <a class="button-like" download target="_blank"
-            href="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@1.0.6/easy.js"> Download
+            href="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0/connectors/easy.ajax.js"> Download
         </a></p>
 
     <pre><code class="html hljs">
@@ -22,7 +22,7 @@
 
     <h3> <a> CDN </a> </h3>
     <pre><code class="html hljs">
-    &lt;script src="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@1.0.6/easy.js"&gt;&lt;/script&gt;
+    &lt;script src="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0/connectors/easy.free.js"&gt;&lt;/script&gt;
     </code></pre>
 
     <br>
@@ -36,7 +36,7 @@
     
     <p> Download the <i class="note mark-el">free</i> file: </p>
     <p> <a class="button-like" download target="_blank"
-            href="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@1.0.6/easy.js"> Download
+            href="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0/easy.js"> Download
         </a> </p>
 </section>
 <script>
