--- a/docs/components/doc-sections/en/download-connectors.html
+++ b/docs/components/doc-sections/en/download-connectors.html
@@ -36,7 +36,7 @@
     
     <p> Download the <i class="note mark-el">free</i> file: </p>
     <p> <a class="button-like" download target="_blank"
-            href="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0/easy.js"> Download
+            href="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0/connectors/easy.free.js"> Download
         </a> </p>
 </section>
 <script>
