Connectors download url updated

--- a/docs/components/doc-sections/en/download-connectors.html
+++ b/docs/components/doc-sections/en/download-connectors.html
@@ -11,18 +11,17 @@
     <p> Use it locally, download the file and import it: </p>
 
     <p> <a class="button-like" download target="_blank"
-            href="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0/connectors/easy.ajax.js"> Download
-        </a></p>
+            href="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0/connectors/easy.ajax.js"> Download </a></p>
 
     <pre><code class="html hljs">
-    &lt;script src="/js/easy.ajax.js"&gt;&lt;/script&gt;
+    &lt;script src="js/easy.ajax.js"&gt;&lt;/script&gt;
     </code></pre>
 
     <p> Or, use... </p>
 
     <h3> <a> CDN </a> </h3>
     <pre><code class="html hljs">
-    &lt;script src="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0/connectors/easy.free.js"&gt;&lt;/script&gt;
+    &lt;script src="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0/connectors/easy.ajax.js"&gt;&lt;/script&gt;
     </code></pre>
 
     <br>
@@ -33,11 +32,10 @@
     <h2> Easy Free </h2>
 
     <h3> <a> Locally </a> </h3>
-    
+
     <p> Download the <i class="note mark-el">free</i> file: </p>
     <p> <a class="button-like" download target="_blank"
-            href="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0/connectors/easy.free.js"> Download
-        </a> </p>
+            href="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0/connectors/easy.free.js"> Download </a> </p>
 </section>
 <script>
     this.mounted = function (el) {
