Download url refreshed

--- a/docs/components/doc-sections/en/download-connectors.html
+++ b/docs/components/doc-sections/en/download-connectors.html
@@ -11,7 +11,7 @@
     <p> Use it locally, download the file and import it: </p>
 
     <p> <a class="button-like" download target="_blank"
-            href="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0/connectors/easy.ajax.js"> Download </a></p>
+            href="https://github.com/AfonsoMatElias/easy/releases/download/v2.0.0-rls/easy.ajax.js"> Download </a></p>
 
     <pre><code class="html hljs">
     &lt;script src="js/easy.ajax.js"&gt;&lt;/script&gt;
@@ -34,8 +34,8 @@
     <h3> <a> Locally </a> </h3>
 
     <p> Download the <i class="note mark-el">free</i> file: </p>
-    <p> <a class="button-like" download target="_blank"
-            href="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0/connectors/easy.free.js"> Download </a> </p>
+    <p> <a class="button-like" download
+            href="https://github.com/AfonsoMatElias/easy/releases/download/v2.0.0-rls/easy.free.js"> Download </a> </p>
 </section>
 <script>
     this.mounted = function (el) {
