--- a/docs/components/doc-sections/en/installation.html
+++ b/docs/components/doc-sections/en/installation.html
@@ -15,8 +15,8 @@
     </p>
 
     <p>
-        <a class="button-like" download target="_blank"
-            href="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0/easy.js"> Download </a>
+        <a class="button-like" download
+            href="https://github.com/AfonsoMatElias/easy/releases/download/v2.0.0-rls/easy.js"> Download </a>
     </p>
 
     <pre><code class="html hljs">
@@ -33,7 +33,7 @@
     </p>
 
     <pre><code class="html hljs">
-    &lt;script src="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0/easy.js"&gt;&lt;/script&gt;
+    &lt;script src="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0-rls/easy.js"&gt;&lt;/script&gt;
     </code></pre>
 
 </section>
