Updated the urls in the documentation

--- a/docs/components/doc-sections/en/installation.html
+++ b/docs/components/doc-sections/en/installation.html
@@ -20,7 +20,7 @@
     </p>
 
     <pre><code class="html hljs">
-    &lt;script src="/js/easy.js"&gt;&lt;/script&gt;
+    &lt;script src="js/easy.js"&gt;&lt;/script&gt;
     </code></pre>
 
     <p> Or, you can use... </p>
