--- a/docs/components/doc-sections/en/download-connectors.html
+++ b/docs/components/doc-sections/en/download-connectors.html
@@ -21,7 +21,7 @@
 
     <h3> <a> CDN </a> </h3>
     <pre><code class="html hljs">
-    &lt;script src="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0/connectors/easy.ajax.js"&gt;&lt;/script&gt;
+    &lt;script src="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0-rls/connectors/easy.ajax.js"&gt;&lt;/script&gt;
     </code></pre>
 
     <br>
