--- a/docs/components/editor.html
+++ b/docs/components/editor.html
@@ -348,7 +348,7 @@
             function createTemplate(content) {
                 content = content || '';
                 var str = '<html lang="en"><head><meta charset="UTF-8"><title>Live Editor page<\/title>' +
-                    '<script src="assets/js/easy.js"><\/script>' +
+                    '<script src="'+ $easy.options.components.config.base +'assets/js/easy.js"><\/script>' +
                     '<style> * html,body { padding:0; } { font-family: Arial, Helvetica, sans-serif; } ' +
                     'input, button { border: 1px solid lightgray; border-radius: 3px; } button { padding: 3px 10px; } </style>' +
                     '<\/head><body>' + content + '<\/body>' +
