--- a/docs/components/main.html
+++ b/docs/components/main.html
@@ -61,9 +61,8 @@
         <div class="center-content">
             <h3 class="main-page-description">
                 What's <span class="note">Easy.js</span>? Is a javascript library for building user interfaces, and
-                helps in
-                the web applications development, providing a synchronous interaction between user interfaces and
-                Javascript data. In some ways and commands, it is very similar to
+                helps in the web applications development, providing a synchronous interaction between user interfaces 
+                and Javascript data. In some ways and commands, it is very similar to
                 <span class="note">Vue.js</span> and <span class="note">Angular.js</span>, but it handles things
                 differently!
             </h3>
