'If Else' condition handler updated to a new form; Documentation updated; and bug fixed

--- a/docs/components/doc-sections/en/components.html
+++ b/docs/components/doc-sections/en/components.html
@@ -263,7 +263,7 @@
         (<i class="mark-el">outside scope</i>), we use <i class="mark-el">this.scope</i>
     </p>
 
-    <div class="block-note mark-el">
+    <div class="block-note info">
         <p>
             The <i class="note">Easy</i> instance of this component can be accessed in <i
                 class="note mark-el">this.Easy</i>.
@@ -319,8 +319,8 @@
 
     <h3> <a id="comp_exporting" href="#comp_exporting"> Exporting </a> </h3>
     <p>
-        The function that is used to export data from the script to the template. To be able to
-        export the data, it needs to be defined as following: <i class="note mark-el">this.export({...})</i>.
+        The function that is used to export data from the script to the template is <span class="mark-el">export</span>.
+        To be able to export the data, it needs to be defined as following: <i class="note mark-el">this.export({...})</i>.
     </p>
 
     <div class="block-note info">
@@ -356,7 +356,7 @@
         });
     &lt;/script&gt;
 
-    &lt;style scoped&gt;    
+    &lt;style scoped&gt;
         h3 {
             color: gray;
         }
