--- a/docs/components/doc-sections/en/download-connectors.html
+++ b/docs/components/doc-sections/en/download-connectors.html
@@ -11,7 +11,7 @@
     <p> Use it locally, download the file and import it: </p>
 
     <p> <a class="button-like" download target="_blank"
-            href="https://github.com/AfonsoMatElias/easy/releases/download/v2.0.0-rls/easy.ajax.js"> Download </a></p>
+            href="{{ app.connectors.ajax }}"> Download </a></p>
 
     <pre><code class="html hljs">
     &lt;script src="js/easy.ajax.js"&gt;&lt;/script&gt;
@@ -34,11 +34,14 @@
     <h3> <a> Locally </a> </h3>
 
     <p> Download the <i class="note mark-el">free</i> file: </p>
-    <p> <a class="button-like" download
-            href="https://github.com/AfonsoMatElias/easy/releases/download/v2.0.0-rls/easy.free.js"> Download </a> </p>
+    <p> <a class="button-like" download href="{{ app.connectors.free }}"> Download </a> </p>
 </section>
 <script>
     this.mounted = function (el) {
         appExector(el);
     }
+
+    this.export({
+        app: this.Easy.data.app
+    });
 </script>
