--- a/docs/components/doc-sections/en/installation.html
+++ b/docs/components/doc-sections/en/installation.html
@@ -19,7 +19,7 @@
     </p>
 
     <pre><code class="html hljs">
-    &lt;script src="js/easy.js"&gt;&lt;/script&gt;
+&lt;script src="js/easy.js"&gt;&lt;/script&gt;
     </code></pre>
 
     <p> Or, you can use... </p>
@@ -32,7 +32,7 @@
     </p>
 
     <pre><code class="html hljs">
-    &lt;script src="https://cdn.jsdelivr.net/gh/afonsomatelias/easy@2.0.0-rls/easy.js"&gt;&lt;/script&gt;
+ &lt;script src="{{ app.cdn }}"&gt;&lt;/script&gt;
     </code></pre>
 
 </section>
